--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "singleQuote": false,
   "tabWidth": 2,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
+  "printWidth": 80,
   "semi": true
 }
