--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "eslint": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.8.8",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.34.1",
     "typescript": "^3.9.9"
